<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceActivity"
    android:id="@+id/parent"
    android:background="@color/white">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/motionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/motion_recognition"
            android:textColor="#000000" />

        <Button
            android:id="@+id/speechButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/speech_recognition"
            android:textColor="#000000" />

        <Button
            android:id="@+id/clickButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/clicking_recognition"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12dp"
        android:text="@string/chosen_trigger"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_statistics"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/throwButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="16dp"
        android:text="@string/throw_dice"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="392dp"
        android:layout_height="232dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="14dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/statisticsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reduceButton"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/minus"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/logoutButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="60dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/plus"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diceCount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diceCount"
        android:layout_width="23dp"
        android:layout_height="43dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/reduceButton"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="232dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/rowOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/diceImage1"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="2dp"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/diceImage2"
                android:layout_width="134dp"
                android:layout_height="137dp"
                android:layout_margin="2dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/diceImage3"
                android:layout_width="134dp"
                android:layout_height="137dp"
                android:layout_margin="2dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowTwo"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="2dp">

            <ImageView
                android:id="@+id/diceImage4"
                android:layout_width="134dp"
                android:layout_height="137dp"
                android:layout_margin="2dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/diceImage5"
                android:layout_width="134dp"
                android:layout_height="137dp"
                android:layout_margin="2dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/diceImage6"
                android:layout_width="134dp"
                android:layout_height="137dp"
                android:layout_margin="2dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/previous_throws"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="27dp"
        android:text="Say &quot;Throw&quot;"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>